src/objects/LG_CustomerAccountBalance__c.object
<CustomObject>
    <fields>
        <fullName>LG_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CustomerAccountBalances1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LG_DebitStatus__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Clearing Debts</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Debt information COMET updated</fullName>
                </value>
                <value>
                    <fullName>Debts cleared</fullName>
                </value>
                <value>
                    <fullName>Debts found</fullName>
                </value>
                <value>
                    <fullName>Debts not cleared</fullName>
                </value>
                <value>
                    <fullName>Mismatch found</fullName>
                </value>
                <value>
                    <fullName>Querying Debts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>CustomerAccountBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_TotalCurrentBillingCharges__c</fullName>
        <label>Total Current Billing Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_TotalDebtBalance__c</fullName>
        <label>Total Debt Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_TotalDepositAmount__c</fullName>
        <label>Total Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LG_TotalPayableDebt__c</fullName>
        <label>Total Payable Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Customer Account Balance</label>
    <nameField>
        <displayFormat>CAB-{00000}</displayFormat>
        <label>CAB Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Account Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>